--- a/htdtech/templates/contactinfo.html
+++ b/htdtech/templates/contactinfo.html
@@ -45,7 +45,7 @@
             
     
                 <li >
-                    <a href="https://thehdtechnologies.com/jnj/jnj.aspx">
+                    <a href="https://thehdtechnologies.com/jnj/jnj.aspx" target="_blank">
                     <i class="fa-solid fa-graduation-cap"></i> COLLEGE LOGIN 
                 </a>
             </li>
