--- a/htdtech/templates/home.html
+++ b/htdtech/templates/home.html
@@ -46,7 +46,7 @@
         
 
             <li >
-                <a href="https://thehdtechnologies.com/jnj/jnj.aspx">
+                <a href="https://thehdtechnologies.com/jnj/jnj.aspx" target="_blank">
                 <i class="fa-solid fa-graduation-cap"></i> COLLEGE LOGIN </i>
             </a>
         </li>
@@ -126,15 +126,15 @@
         <marquee  behavior="scroll" direction="up" scrollamount="5" id="notimarquee" class="notimarquee1"> 
             July - 2024
         <br>
-        <a href="https://tnmedicalselection.net/news/22072024061850.pdf" target="_blank"><img  src="pictures/new.gif" /> List of Candidates allotted for MDS (Government Quota) Course Session :2024 - 2025 on - 22.07.2024</a>
+        <a href="https://tnmedicalselection.net/news/22072024061850.pdf" target="_blank"><img  src="{% static 'pictures/new.gif' %}" /> List of Candidates allotted for MDS (Government Quota) Course Session :2024 - 2025 on - 22.07.2024</a>
         <br><br>
          <hr>
          <br>
-         <a href="https://tnmedicalselection.net/news/22072024061615.pdf" target="_blank"><img  src="pictures/new.gif" /> List of Candidates allotted for MDS (Management Quota) Course Session :2024 - 2025 on - 22.07.2024</a>
+         <a href="https://tnmedicalselection.net/news/22072024061615.pdf" target="_blank"><img  src="{% static 'pictures/new.gif' %}" /> List of Candidates allotted for MDS (Management Quota) Course Session :2024 - 2025 on - 22.07.2024</a>
          <br><br>
           <hr>
           <br>
-          <a href="https://tnmedicalselection.net/news/22072024061449.pdf" target="_blank"><img  src="pictures/new.gif" />   Grievances for Provisional Result of MDS course in Government Dental Colleges and Government Quota / Management Quota including (NRI) in self financing Dental Colleges for academic year 2024-2025.</a>
+          <a href="https://tnmedicalselection.net/news/22072024061449.pdf" target="_blank"><img  src="{% static 'pictures/new.gif' %}" />   Grievances for Provisional Result of MDS course in Government Dental Colleges and Government Quota / Management Quota including (NRI) in self financing Dental Colleges for academic year 2024-2025.</a>
           <br><br>
            <hr>
            <br>
@@ -222,7 +222,7 @@
     </marquee></li> 
         <li>
             <marquee  behavior="scroll" direction="up" scrollamount="0" class="notimarquee2" >
-                  <pre>                         <a href="notification.html"> << view all >></view> </a> </pre>
+                  <pre>                         <a href="{% url 'notification' %}"> << view all >></view> </a> </pre>
             </marquee>
         </li>
     </ul>
@@ -237,12 +237,12 @@
 
 
 
-<div class="tabletamil">
+
 
 
   
 
-    <div class="tamil">
+    <div class="tamil" style="margin-left:7%;">
         <pre>
        <p>        நோய்நாடி நோய்முதல் நாடி அதுதனிக்கும்,
         வாய்நாடி வாய்ப்ப செயல்</p>
@@ -268,7 +268,7 @@
 
 
 
-</div>
+
 
 
 <div class="newnoti">
