--- a/htdtech/templates/previousyearinformation.html
+++ b/htdtech/templates/previousyearinformation.html
@@ -44,7 +44,7 @@
         
 
             <li >
-                <a href="https://thehdtechnologies.com/jnj/jnj.aspx">
+                <a href="https://thehdtechnologies.com/jnj/jnj.aspx" target="_blank">
                 <i class="fa-solid fa-graduation-cap"></i> COLLEGE LOGIN </i>
             </a>
         </li>
@@ -92,49 +92,16 @@
 
  <!-- Form for selecting academic year -->
 
- <form method="GET" action="">
+ <form method="POST" action="">
+    {% csrf_token %}
     <label for="year"><h3 style="padding-left:15px;">Select Academic Year:</h3></label>
     <select name="year" id="selection" onchange="this.form.submit()">
-        <option value="2023 - 2024" {% if selected_year == '2023 - 2024' %}selected{% endif %}>2023 - 2024</option>
-        <option value="2022 - 2023" {% if selected_year == '2022 - 2023' %}selected{% endif %}>2022 - 2023</option>
-        <option value="2021 - 2022" {% if selected_year == '2021 - 2022' %}selected{% endif %}>2021 - 2022</option>
-        <option value="2020 - 2021" {% if selected_year == '2020 - 2021' %}selected{% endif %}>2020 - 2021</option>
-        <option value="2019 - 2020" {% if selected_year == '2019 - 2020' %}selected{% endif %}>2019 - 2020</option>
-        <option value="2018 - 2019" {% if selected_year == '2018 - 2019' %}selected{% endif %}>2018 - 2019</option>
-        <option value="2017 - 2018" {% if selected_year == '2017 - 2018' %}selected{% endif %}>2017 - 2018</option>
-        <option value="2016 - 2017" {% if selected_year == '2016 - 2017' %}selected{% endif %}>2016 - 2017</option>
-        <option value="2015 - 2016" {% if selected_year == '2015 - 2016' %}selected{% endif %}>2015 - 2016</option>
-        <option value="2014 - 2015" {% if selected_year == '2014 - 2015' %}selected{% endif %}>2014 - 2015</option>
-        <option value="2013 - 2014" {% if selected_year == '2013 - 2014' %}selected{% endif %}>2013 - 2014</option>
-        <option value="2012 - 2013" {% if selected_year == '2012 - 2013' %}selected{% endif %}>2012 - 2013</option>
-        <option value="2011 - 2012" {% if selected_year == '2011 - 2012' %}selected{% endif %}>2011 - 2012</option>
-        <option value="2010 - 2011" {% if selected_year == '2010 - 2011' %}selected{% endif %}>2010 - 2011</option>
-        <option value="2009 - 2010" {% if selected_year == '2009 - 2010' %}selected{% endif %}>2009 - 2010</option>
-        <option value="2008 - 2009" {% if selected_year == '2008 - 2009' %}selected{% endif %}>2008 - 2009</option>
-        <option value="2007 - 2008" {% if selected_year == '2007 - 2008' %}selected{% endif %}>2007 - 2008</option>
-        <option value="2006 - 2007" {% if selected_year == '2006 - 2007' %}selected{% endif %}>2006 - 2007</option>
-        <option value="2005 - 2006" {% if selected_year == '2005 - 2006' %}selected{% endif %}>2005 - 2006</option>
-        <option value="2004 - 2005" {% if selected_year == '2004 - 2005' %}selected{% endif %}>2004 - 2005</option>
-        <option value="2003 - 2004" {% if selected_year == '2003 - 2004' %}selected{% endif %}>2003 - 2004</option>
-        <option value="2002 - 2003" {% if selected_year == '2002 - 2003' %}selected{% endif %}>2002 - 2003</option>
-        <option value="2001 - 2002" {% if selected_year == '2001 - 2002' %}selected{% endif %}>2001 - 2002</option>
-        <option value="2000 - 2001" {% if selected_year == '2000 - 2001' %}selected{% endif %}>2000 - 2001</option>
-        <option value="1999 - 2000" {% if selected_year == '1999 - 2000' %}selected{% endif %}>1999 - 2000</option>
-        <option value="1998 - 1999" {% if selected_year == '1998 - 1999' %}selected{% endif %}>1998 - 1999</option>
-        <option value="1997 - 1998" {% if selected_year == '1997 - 1998' %}selected{% endif %}>1997 - 1998</option>
-        <option value="1996 - 1997" {% if selected_year == '1996 - 1997' %}selected{% endif %}>1996 - 1997</option>
-        <option value="1995 - 1996" {% if selected_year == '1995 - 1996' %}selected{% endif %}>1995 - 1996</option>
-        <option value="1994 - 1995" {% if selected_year == '1994 - 1995' %}selected{% endif %}>1994 - 1995</option>
-        <option value="1993 - 1994" {% if selected_year == '1993 - 1994' %}selected{% endif %}>1993 - 1994</option>
-        <option value="1992 - 1993" {% if selected_year == '1992 - 1993' %}selected{% endif %}>1992 - 1993</option>
-        <option value="1991 - 1992" {% if selected_year == '1991 - 1992' %}selected{% endif %}>1991 - 1992</option>
-        <option value="1990 - 1991" {% if selected_year == '1990 - 1991' %}selected{% endif %}>1990 - 1991</option>
-        <option value="1989 - 1990" {% if selected_year == '1989 - 1990' %}selected{% endif %}>1989 - 1990</option>
-        <option value="1988 - 1989" {% if selected_year == '1988 - 1989' %}selected{% endif %}>1988 - 1989</option>
-        <option value="1987 - 1988" {% if selected_year == '1987 - 1988' %}selected{% endif %}>1987 - 1988</option>
-        <option value="1986 - 1987" {% if selected_year == '1986 - 1987' %}selected{% endif %}>1986 - 1987</option>
-        <option value="1985 - 1986" {% if selected_year == '1985 - 1986' %}selected{% endif %}>1985 - 1986</option>
-        <option value="1984 - 1985" {% if selected_year == '1984 - 1985' %}selected{% endif %}>1984 - 1985</option>
+
+        {% for year in years %}
+    <option value="{{ year }}" {% if selected_year == year %}selected{% endif %}>{{ year }}</option>
+  {% endfor %}
+
+        
         
     </select>
 </form>
@@ -282,6 +249,7 @@
 
     <!-- use JAVASCRIPT code here....!-->
 
+  
 
 
 const marquee= document.getElementById("scrolling-text")
@@ -297,6 +265,9 @@ marquee.start();
 
 
 </script>
+
+
+
 
 </body>
 </html>
